--- a/MIST143_Traveler/wwwroot/css/travelOrder.css
+++ b/MIST143_Traveler/wwwroot/css/travelOrder.css
@@ -355,3 +355,7 @@ input::-webkit-inner-spin-button {
 #prodctDescriptionHidden,.hiddenEle{
     display:none;
 }
+
+.coupon.used {
+    opacity:0.5 !important;
+}
