--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -40,8 +40,40 @@
             </form>
 
             <nav class="main-nav">
+               
                 <a href="@Url.Content("~/Home/ContactCenter")">客服中心</a>
-                <a href="@Url.Content("~/ProductListPage/ProductListHomePage")">最近逛過</a>
+                @{if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_PRODUCT))
+                    {
+                        var ASD = Accessor.HttpContext.Session.GetString(CDictionary.SK_PRODUCT);
+                        var a = JsonSerializer.Deserialize<List<MIST143_Traveler.MViewModel.Cproductlist>>(ASD);
+
+                        <a class=" dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">最近逛過</a>
+                        <ul class="dropdown-menu box wrapper">
+
+                            @{
+                                foreach (var item in a)
+                                {
+
+                                    <li>
+                                        <a class=" ellipsis klsdjfi" href="@Url.Action("List", "shopping", new {TravelProductId=item.TravelProductId })">
+                                            <img src="https://localhost:44338/images/TravelProductPictures/@item.productpicture" class="image" />
+                                            <div class="infoo">
+                                                <h4 class="titlle">@item.TravelProductName</h4>
+                                                <ul class="price">
+                                                    <li>
+                                                        NT: @item.Price.ToString("###,###,##0")
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </a>
+                                    </li>
+                                }
+
+                            }
+
+                        </ul>
+                    }
+                }
 
                 <a href="@Url.Content("~/Shopping/ShoppingCartSession")">購物車</a>
 
@@ -51,20 +83,20 @@
                         var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
                         var v = JsonSerializer.Deserialize<Member>(OBJ);
 
-                                <button class="btn btn-light dropdown-toggle" style="text-decoration:none;border:none" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                                    @{
-                                        if (v.PhotoPath != null)
-                                        {
-                                            <img src="~/Images/客戶大頭貼/@v.PhotoPath" style="width: 30px; height: 30px; border-radius: 50%" />@v.MemberName
-                                        }
-                                        else
-                                        {
-                                            <img src="~/Images/contact/300.png" id="avatarShow" style="width:30px;height:30px;border-radius:50%" />@v.MemberName
-                                        }
-                                    }
+                        <button class="btn btn-light dropdown-toggle" style="text-decoration:none;border:none" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                            @{
+                                if (v.PhotoPath != null)
+                                {
+                                    <img src="~/Images/客戶大頭貼/@v.PhotoPath" style="width: 30px; height: 30px; border-radius: 50%" />@v.MemberName
+                                }
+                                else
+                                {
+                                    <img src="~/Images/contact/300.png" id="avatarShow" style="width:30px;height:30px;border-radius:50%" />@v.MemberName
+                                }
+                            }
 
 
-                                </button>
+                        </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu2" style="color:white;text-decoration:none">
                             <li><a href="@Url.ActionLink("List","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-people" type="button">會員專區</a></li>
                             <li><a href="@Url.ActionLink("Coupon","CustomerCenter",new {v.MembersId})" class="dropdown-item bi bi-wallet2" type="button">優惠券</a></li>
@@ -84,7 +116,7 @@
 
 
 
-               
+
             </nav>
             <div class="border-bottom-line"></div>
         </div>
