--- a/MIST143_Traveler/wwwroot/css/travelIndex.css
+++ b/MIST143_Traveler/wwwroot/css/travelIndex.css
@@ -564,3 +564,58 @@ ul {
             /* 滑鼠滑入展開次選單*/
             display: block;
         }
+.box {
+    width: 300px;
+}
+
+.ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.klsdjfi {
+    display: flex;
+}
+
+.image {
+    width: 80px;
+    height: 60px;
+    margin-right: 12px;
+    border-radius: 4px;
+    -o-object-fit: cover;
+    object-fit: cover;
+}
+
+.infoo {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    width: 200px;
+}
+
+.titlle {
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.29;
+    /*    display: -webkit-box;*/
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.price {
+    margin-top: 8px;
+    font-size: 14px;
+    padding-left:0px;
+}
+
+.wrapper {
+    max-height: 400px;
+    overflow: auto;
+}
