--- a/MIST143_Traveler/Views/Home/ContactCenter.cshtml
+++ b/MIST143_Traveler/Views/Home/ContactCenter.cshtml
@@ -22,7 +22,7 @@
          data-wow-delay="0.1s">
         <div class="container text-center pt-5 pb-3">
             <h1 class="display-4 text-white animated slideInDown mb-3">
-                Contact Us
+                客服專區
             </h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
@@ -93,7 +93,12 @@
                     </div>
                 </div>
 
-                <section class="search_area">
+                <div id="coupon">
+                    
+
+                </div>
+
+                <!--<section class="search_area">
                     <div class="search_area_contant">
                         <strong class="text-warning text-uppercase textmm mx-auto">聯絡我們</strong>
 
@@ -101,10 +106,10 @@
                             <input class="form-control"
                                    type="text"
                                    placeholder="您的信箱帳號"
-                                   aria-label="default input example" />
+                                   aria-label="default input example" />-->
 
                             @*傳送訊息框*@
-                            <div class="form-floating p-5">
+                            <!--<div class="form-floating p-5">
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                                 <label for="floatingTextarea2"></label>
                                 <div class="offset-8"> <button type="button" class="btn btn-warning">送出</button></div>
@@ -119,7 +124,7 @@
                         </h1>
                     </div>
 
-                </section>
+                </section>-->
             </div>
         </div>
     </div>
