--- a/MIST143_Traveler/Views/CustomerCenter/CommentCreate.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CommentCreate.cshtml
@@ -31,7 +31,7 @@
                 <img src="~/Images/contact/star2.png" />
                 <img src="~/Images/contact/star2.png" />
                 <input id="jaba" value="@Model.OrderId" hidden />
-                <p id="Star"></p>
+                <p id="Star"hidden></p>
 
             </div>
 
